# DeepLearningLab

./: .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  pyproject.toml
.github/workflows/: python-ci.yml
docs/: TUTORIAL_handling_documentation_requests.md  decoding_strategies.md  python_notes.md  pytorch_notes.md
docs/LLM/Transformer/InferenceAndOptimizations/: 01_greedy_decoding.md  02_topKAndTopP.md  03_multinomial_sampling.md  04_repetition_penalty.md
docs/SOLID/: ClassVsFunction.md
docs/pytorch/: pytorch_notes.md  torch_arange.md
notebooks/: 00_introduction.ipynb
playground/PyTorch/: 01_scatter_.md  01_scatter_.py  02_argmax.md  02_argmax.py  03_multinomial.md  03_multinomial.py  README.md
playground/SOLID/: 01_class_vs_function.md  01_class_vs_function.py
playground/numpy/: 01-cumsum_example.py
playground/tensor/: 01_index.md  01_kth_vals.md  01_kth_vals_last_none.py  02_broadcasting_none.md  02_broadcasting_none.py  03_torch_where.md  03_torch_where.py  04_torch_sort.md  05_torch_arange.md  05_torch_arange.py  06_torch_squeeze_unsqueeze.md  06_torch_squeeze_unsqueeze.py
src/dllab/: __init__.py
src/dllab/generation/: __init__.py  base.py  decoding.py  filters.py  generator.py  positional.py  strategies.py
src/dllab/utils/: random.py
tests/LLM/Transformer/InferenceAndOptimizations/: test_generator_debug.py
